--- a/Changes
+++ b/Changes
@@ -1,8 +1,9 @@
 Revision history for Web-Simple
 
-  - Allow passing method names to dispatcher (Christian Walde)
-  - Added Web::Simple::Role (Hakim Cassimally)
-  - Many doc updates from Christian Walde, Matt Phillips, Karen Etheridge
+  - Handle ) as last character of composite spec
+  - Allow passing method names to dispatcher
+  - Added Web::Simple::Role
+  - Assorted doc updates
 
 0.020 - 2012-08-03
   - re-dist for botched release
