--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Web-Simple
 
+  - Remove erroneous require of deleted Web::Dispatch::Node
+
 0.021 - 2014-05-20
   - Handle ) as last character of composite spec
   - Allow passing method names to dispatcher
