give attribution for leak fix

--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 Revision history for Web-Simple
 
   - fixes a memory leak that occurs when calling
-    Web::Simple::Application::to_psgi_app
+    Web::Simple::Application::to_psgi_app (Christian Walde)
 
 0.024 - 2014-07-03
   - small documentation fixes
