--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for Web-Simple
 
   - fixes a memory leak that occurs when calling
     Web::Simple::Application::to_psgi_app (Christian Walde)
+  - more complete prerequisite declarations
 
 0.024 - 2014-07-03
   - small documentation fixes
