--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Web-Simple
 
+  - remove erroneous XML::Tags prereq
+
 0.025 - 2014-07-07
   - fixes a memory leak that occurs when calling
     Web::Simple::Application::to_psgi_app (Christian Walde)
