--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Web-Simple
 
   - remove use of 'use base'
+  - lower minimum required version of perl properly down to 5.6
 
 0.027 - 2014-07-11
   - stable release of 0.026_001
