--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 Revision history for Web-Simple
 
+  - handle empty query parameters
   - produce a sensible error for (GET => undef) on 5.8
 
 0.030 - 2014-08-07
